# OxiNEAT

./: Cargo.toml  README.md
hyperneat/: Cargo.toml
neat/: Cargo.toml
neat/src/: genome.rs  genomes.rs  lib.rs  network.rs  networks.rs  population.rs  populations.rs  result.rs  rng.rs
neat/src/genomes/: config.rs  errors.rs  genes.rs  history.rs  nodes.rs
neat/src/networks/: connections.rs  nodes.rs
neat/src/populations/: config.rs  errors.rs  log.rs  offspring.rs  offspring_factory.rs  species.rs
oxineat/: Cargo.toml  readme.md
oxineat-nn/: Cargo.toml  LICENSE-MIT  README.md
oxineat-nn/src/: genomics.rs  lib.rs  networks.rs
oxineat-nn/src/genomics/: config.rs  errors.rs  genes.rs  history.rs  nodes.rs
oxineat-nn/src/networks/: connection.rs  function_approximator.rs
oxineat/src/: genome.rs  genomes.rs  genomics.rs  lib.rs  networks.rs  populations.rs
oxineat/src/genomes/: config.rs  errors.rs  genes.rs  history.rs  nodes.rs
oxineat/src/genomics/: config.rs  errors.rs  history.rs  nodes.rs
oxineat/src/networks/: connection.rs  function_approximator.rs
oxineat/src/populations/: config.rs  errors.rs  log.rs  logging.rs  offspring_factory.rs  rt_population.rs  species.rs
xor/: Cargo.toml
xor/src/: main.rs
