[package]
name = "oxineat"
version = "0.3.0"
edition = "2018"
license = "MIT"
description = "A Rust implementation of NeuroEvolution of Augmenting Topologies"
repository = "https://github.com/Fr4ctlize/OxiNEAT"
documentation = "https://docs.rs/oxineat/"
readme = "README.md"
keywords = ["neat", "neuroevolution"]

[dependencies]
rand = "0.8.3"
serde = { version = "1.0.129", features = ["derive"] }
ahash = "0.7.4"

[dev-dependencies]
oxineat-nn = { path = "../oxineat-nn" }