[package]
name = "oxineat"
version = "0.3.1"
edition = "2018"
license = "MIT"
description = "A Rust implementation of NeuroEvolution of Augmenting Topologies"
repository = "https://github.com/Fr4ctlize/OxiNEAT"
documentation = "https://docs.rs/oxineat/"
readme = "README.md"
keywords = ["neat", "neuroevolution"]

[dependencies]
rand = "0.8.3"
ahash = "0.7.4"

[dev-dependencies]
oxineat-nn.version = "0.1.0"
oxineat-nn.path = "../oxineat-nn"