[package]
name = "oxineat"
version = "0.3.2"
edition = "2018"
license = "MIT"
description = "A Rust implementation of NeuroEvolution of Augmenting Topologies"
repository = "https://github.com/Fr4ctlize/OxiNEAT"
documentation = "https://docs.rs/oxineat/"
readme = "README.md"
keywords = ["neat", "neuroevolution"]

[dependencies]
rand = "0.8.3"
ahash = "0.7.4"
serde = { version = "1.0.129", features = ["derive"] }

[dev-dependencies]
oxineat-nn.version = "0.1.1"
oxineat-nn.path = "../oxineat-nn"
serde_json = "1.0"